package com.example.numbersfactstesttask.core.util

object TestTags {

    const val LOADING = "LOADING"
    const val ERROR_MESSAGE = "ERROR_MESSAGE"
    const val FACT_LAZY_COLUMN = "FACT_LAZY_COLUMN"
    const val FACT_NUMBER = "FACT_NUMBER"
    const val FACT_TEXT = "FACT_TEXT"
}